--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="form-group text-center m-t-20">
                         <div class="col-xs-12">
-                            <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Sign Up</button>
+                            <button class="btn btn-info btn-block text-uppercase btn-rounded" type="submit">Sign Up</button>
                         </div>
                     </div>
                     <div class="form-group m-b-0">
