Graficas Input Output

--- a/src/app/pages/grafical/grafical.component.html
+++ b/src/app/pages/grafical/grafical.component.html
@@ -1,1 +1,28 @@
-<p>grafical works!</p>
+<div class="row">
+  <div class="col-6">
+    Grafica
+    <app-graficadona titulo="Ventas"
+                    [labels]="labelVentas"
+                    [Data]="DataVentas">
+
+    </app-graficadona>
+  </div>
+  <div class="col-6">
+    Grafica
+    <app-graficadona titulo="Compras"
+    ></app-graficadona>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6">
+    Grafica
+    <app-graficadona titulo="Perdidas"
+    ></app-graficadona>
+  </div>
+  <div class="col-6">
+    Grafica
+    <app-graficadona titulo="Ganancias"
+    ></app-graficadona>
+  </div>
+</div>
